assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat');
@import url('https://fonts.googleapis.com/css?family=Allura&display=swap');

html {
	position: relative;
	min-height: 100%;
}

script-text {
	font-family: 'Lora', serif;
	color: #624E78;
	font-size: 1.25rem;
	font-weight: bold;
}

body {
	margin-bottom: 60px;
}

a:link {
	color: #624E78;
}

a:visited {
	color: #624E78;
}

.body-wrapper {
	font-family: 'Montserrat', sans-serif;
}

.box {
	height: 275px;
	background-color: #dfd6f0;
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 15px;
	opacity: .7;
	font-weight: 900;
	font-size: 1.65rem;
	box-shadow: 2px 2px 4px #888888;
}

.box:hover {
	opacity: .99;
	box-shadow: 6px 6px 12px #888888;
}

.footer {
	position: absolute;
	bottom: 0;
	width: 100%;
	height: 85px;
}

.mainbody {
	background-color: white;
	padding-top: 35px;
	padding-bottom: 35px;
}

.fit {
	box-sizing: border-box;
}

.jumbotron {

	position: relative;
	overflow: hidden;
	background-color: black;
}

.jumbotron video {

	position: absolute;
	z-index: 1;
	width: 100%;
	height: 100%;
	/*  object-fit is not supported on IE  */
	object-fit: cover;
	opacity: 0.8;
}

.jumbotron .container {
	text-align: center;
	z-index: 2;
	position: relative;
}

.jumbotron-hero {

	height: 400px;
	background-size: cover;

}

/* TABLET MEDIA QUERIES */
@media only screen and (max-width: 1000px) {
	.box {
		height: 225px;
		opacity: .99;
	}

	.navbar {
		margin-bottom: 0px !important;
	}

	.video-responsive {
		overflow: hidden;
		padding-bottom: 56.25%;
		position: relative;
		height: 0;
	}

	.video-responsive iframe {
		left: 0;
		top: 0;
		height: 100%;
		width: 100%;
		position: absolute;
	}
}

/* PHONE MEDIA QUERIES */
@media only screen and (max-width: 500px) {
	.jumbotron-hero {
		height: 250px;
	}

	.box {
		height: 200px;
		opacity: .99;
	}

	.navbar {
		margin-bottom: 0px !important;
	}

	.video-responsive {
		overflow: hidden;
		padding-bottom: 56.25%;
		position: relative;
		height: 0;
	}

	.video-responsive iframe {
		left: 0;
		top: 0;
		height: 100%;
		width: 100%;
		position: absolute;
	}
}

